tests/type_check/rvalue_typing/rvalue_typing_invalid.err.expected
error: at 22:5: [TC-EnumConstrOnNonEnum] In function 'undeclared_enum', block 'entry': Undeclared enum 'Nope'
    |
 22 |     o = Nope::Some(42);
    |     ^^^^^^^^^^^^^^^^^^
error: at 34:5: [TC-NoSuchVariant] In function 'unknown_variant', block 'entry': Enum 'Option' has no variant 'Wat'
    |
 34 |     o = Option::Wat(42);
    |     ^^^^^^^^^^^^^^^^^^^
error: at 46:5: [TC-EnumConstrPayloadTypeMismatch] In function 'payload_type_mismatch', block 'entry': Variant 'Some' of enum 'Option' expects type i64, found bool
    |
 46 |     o = Option::Some(true);
    |     ^^^^^^^^^^^^^^^^^^^^^^
